--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ gst = { package = "gstreamer", git="https://gitlab.freedesktop.org/gstreamer/gst
 gst-base = { package = "gstreamer-base", git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git"}
 gst-video = { package = "gstreamer-video", git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git"}
 glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
+cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", features=["use_glib"] }
 once_cell = "1.0"
-anyhow = "1.0"
+# anyhow = "1.0"
+anyhow = { version = "1", features = ["backtrace"] }
 derive_more = "0.99.5"
 futures = "0.3"
